# proteus

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  ChangeLog  Changelog  Judith  LICENSE  Makefile  README.md  _clang-format  activate.sh.in  genmake.py  process.sh
.gitlab-ci.d/: Dockerfile  cvmfs-slc6-llvm39-root606.sh
ci/: cvmfs-slc6-gcc48-root534.sh  cvmfs-slc6-gcc49-root606.sh  init_x86_64.sh  install_with_eudaq.sh  (+2 more)
doc/: CMakeLists.txt  basic_steps.rst  commands.rst  conf.py.in  configuration.rst  configuration_files-old.rst  configuration_files.rst  contribution.rst  contribution_guide.rst  doxyfile.in  index.rst  internal_structure.rst
exe/: CMakeLists.txt  pt-align.cpp  pt-cfg.cpp  pt-combine.cpp  pt-convert.cpp  pt-match.cpp  pt-noisescan.cpp  pt-recon.cpp  pt-resolution.cpp  pt-track.cpp
exe/align/: CMakeLists.txt  aligner.h  correlationsaligner.cpp  correlationsaligner.h  pt-align.cpp  residualsaligner.cpp  residualsaligner.h
exe/noisescan/: CMakeLists.txt  noisescan.cpp  noisescan.h  pt-noisescan.cpp
lib/: CMakeLists.txt
lib/alignment/: aligner.h  correlationsaligner.cpp  correlationsaligner.h  localchi2aligner.cpp  localchi2aligner.h  residualsaligner.cpp  residualsaligner.h
lib/analyzers/: analyzer.h  basicefficiency.cpp  basicefficiency.h  clusterinfo.cpp  clusterinfo.h  clusters.cpp  clusters.h  correlations.cpp  correlations.h  cuts.h  depiction.cpp  distances.cpp  distances.h  efficiency.cpp  efficiency.h  eventinfo.cpp  eventinfo.h  eventprinter.cpp  eventprinter.h  events.cpp  events.h  globaloccupancy.cpp  globaloccupancy.h  hitinfo.cpp  hitinfo.h  hits.cpp  hits.h  noisescan.cpp  noisescan.h  residuals.cpp  residuals.h  trackinfo.cpp  trackinfo.h  tracks.cpp  tracks.h
lib/converters/: kartelconvert.h
lib/io/: eudaq.cpp  eudaq.h  eudaq1.cpp  eudaq1.h  eudaq2.cpp  eudaq2.h  match.cpp  match.h  merger.cpp  merger.h  open.cpp  open.h  rceroot.cpp  rceroot.h  reader.cpp  reader.h  test.cpp  timepix3.cpp  timepix3.h  writer.cpp  writer.h
lib/loop/: analyzer.h  eventloop.cpp  eventloop.h  processor.h  reader.h  sensorprocessor.h  writer.h
lib/mechanics/: device.cpp  device.h  geometry.cpp  geometry.h  pixelmasks.cpp  pixelmasks.h  sensor.cpp  sensor.h
lib/processors/: applygeometry.cpp  applygeometry.h  applylocaltransform.cpp  applylocaltransform.h  applyregions.cpp  applyregions.h  clusterizer.cpp  clusterizer.h  eventdepictor.cpp  hitmapper.cpp  hitmapper.h  matcher.cpp  matcher.h  processor.h  setupsensors.cpp  setupsensors.h  synchronizer.cpp  trackfinder.cpp  trackfitter.cpp
lib/storage/: cluster.cpp  cluster.h  event.cpp  event.h  hit.cpp  hit.h  plane.cpp  plane.h  sensorevent.cpp  sensorevent.h  track.cpp  track.h  trackstate.cpp  trackstate.h
lib/tracking/: gblfitter.cpp  gblfitter.h  linefitter.h  propagation.cpp  propagation.h  setupfitter.cpp  setupfitter.h  straightfitter.cpp  straightfitter.h  straighttools.h  trackfinder.cpp  trackfinder.h  tracking.cpp  tracking.h
lib/utils/: application.cpp  application.h  arguments.cpp  arguments.h  association.h  config.cpp  config.h  definitions.h  densemask.cpp  densemask.h  eventloop.cpp  eventloop.h  interval.h  logger.cpp  logger.h  progress.h  range.h  root.cpp  root.h  statistics.h
src/: CMakeLists.txt  application.cpp  application.h  configparser.cpp  configparser.h  exception.cpp  exception.h  inputargs.cpp  inputargs.h  main.cpp  pt-align.cpp  pt-analysis.cpp  pt-cfg.cpp  pt-match.cpp  pt-noise.cpp  pt-noisescan.cpp  pt-track.cpp
src/alignment/: aligner.h  correlationaligner.cpp  correlationaligner.h  correlationsaligner.cpp  correlationsaligner.h  residualsaligner.cpp  residualsaligner.h
src/analyzers/: analyzer.cpp  analyzer.h  baseanalyzer.cpp  baseanalyzer.h  basicefficiency.cpp  basicefficiency.h  clusterinfo.cpp  clusterinfo.h  configanalyzers.cpp  configanalyzers.h  correlation.cpp  correlation.h  correlations.cpp  correlations.h  cuts.h  depiction.cpp  distances.cpp  distances.h  dualanalyzer.cpp  dualanalyzer.h  dutcorrelation.cpp  dutcorrelation.h  dutdepiction.cpp  dutresiduals.cpp  dutresiduals.h  efficiency.cpp  efficiency.h  eventinfo.cpp  eventinfo.h  eventprinter.cpp  eventprinter.h  exampledualanalyzer.cpp  exampledualanalyzer.h  examplesingleanalyzer.cpp  examplesingleanalyzer.h  hitinfo.cpp  hitinfo.h  matchexporter.cpp  matchexporter.h  matching.cpp  (+14 more)
src/converters/: kartelconvert.cpp
src/io/: io.cpp  io.h  match.cpp  match.h  rceroot.cpp  rceroot.h  reader.h
src/loopers/: analysis.cpp  analysis.h  analysisdut.cpp  analysisdut.h  applymask.cpp  applymask.h  coarsealign.cpp  coarsealign.h  coarsealigndut.cpp  coarsealigndut.h  configloopers.cpp  configloopers.h  examplelooper.cpp  examplelooper.h  finealign.cpp  finealign.h  finealigndut.cpp  finealigndut.h  looper.cpp  looper.h  noisescan.cpp  noisescan.h  processevents.cpp  processevents.h  synchronize.cpp
src/mechanics/: alignment.cpp  alignment.h  configmechanics.cpp  configmechanics.h  device.cpp  device.h  geometry.cpp  geometry.h  noisemask.cpp  noisemask.h  pixelmasks.cpp  sensor.cpp  sensor.h
src/processors/: applyalignment.cpp  applyalignment.h  applygeometry.cpp  applygeometry.h  applyregions.cpp  applyregions.h  clusterizer.cpp  clusterizer.h  clustermaker.cpp  clustermaker.h  configprocessors.cpp  configprocessors.h  eventdepictor.cpp  hitmapper.cpp  hitmapper.h  largesynchronizer.cpp  matcher.cpp  matcher.h  processor.cpp  processor.h  processors.cpp  processors.h  setupsensors.h  synchronizer.cpp  trackfinder.cpp  trackfinder.h  trackfitter.cpp  trackfitter.h  tracking.cpp  tracking.h  trackmaker.cpp  trackmaker.h  trackmatcher.cpp
src/storage/: cluster.cpp  cluster.h  event.cpp  event.h  hit.cpp  hit.h  plane.cpp  plane.h  storageio.cpp  storageio.h  track.cpp  track.h  trackstate.cpp  trackstate.h
src/utils/: arguments.cpp  arguments.h  config.cpp  config.h  configparser.cpp  configparser.h  definitions.h  densemask.cpp  densemask.h  eventloop.cpp  eventloop.h  interval.h  logger.cpp  logger.h  progressbar.h  root.h  statistics.cpp  statistics.h
(+238 files in other folders)
