function(add_tool name)
  set(_exe "pt-${name}")
  add_executable(${_exe} ${ARGN})
  target_link_libraries(${_exe} PUBLIC proteus ROOT::Hist ROOT::Tree)
  install(TARGETS ${_exe} RUNTIME DESTINATION bin)
endfunction()

add_tool(align pt-align.cpp)
add_tool(cfg pt-cfg.cpp)
add_tool(combine pt-combine.cpp)
add_tool(match pt-match.cpp)
add_tool(noisescan pt-noisescan.cpp)
add_tool(recon pt-recon.cpp)
add_tool(resolution pt-resolution.cpp)
add_tool(track pt-track.cpp)
